# AI-Quack

./: LICENSE-APACHE  README.md  package-lock.json  package.json  tailwind.config.js
src/: App.svelte
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: configuration.rs  main.rs
src-tauri/src/commands/: check_api_key.rs  get_text_response.rs  mod.rs  set_api_key.rs
src-tauri/src/open_ai_client/: http_client.rs  message.rs  mod.rs  prompts.rs  request.rs  response.rs
src/lib/: ResponseList.svelte  ResponseText.svelte  TextForm.svelte
src/lib/components/: ApiKeyInput.svelte  ResponseList.svelte  ResponseText.svelte  TextForm.svelte
src/lib/types/: index.ts
