[package]
name = "rubber-ducky-ai"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.2", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
secrecy = { version = "0.8.0", features = ["serde"] }
directories = "5.0.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
anyhow = "1.0.70"

[dependencies.reqwest]
version = "0.11.15"
default-features = false
features = ["json", "rustls-tls"]

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
